@@ -35,10 +35,14 @@ public class HttpConnection {
         throws IOException, URISyntaxException {
         
         HttpURLConnection connection;
-        URL url = new URI(requestURL).toURL();
+        //requestURL = URLEncoder.encode(requestURL,"UTF-8");
+        logger.debug("Request Url : " + requestURL);
+        URL url = new URL(requestURL);
+        URI uri = new URI(url.getProtocol(), url.getHost(), url.getPath(), url.getQuery(),null);
+        //URL url = new URI(requestURL).toURL();
         Proxy proxy = CommonUtils.getJavaProxyFromCProxy(cproxy);
         
-        connection = (HttpURLConnection) (url.openConnection(proxy)); 
+        connection = (HttpURLConnection) (uri.toURL().openConnection(proxy)); 
         //connection.setInstanceFollowRedirects(true);
         connection.setDoInput(true);
         connection.setDoOutput(false);
